Add reactive test runner with TUI and parallel execution
A new `test-reactive` command that revolutionizes test execution:

**Reactive Execution**
- Tests start running as soon as their project compiles (no waiting)
- Parallel test suite execution across multiple JVMs
- Smart scheduling with project priority and fair distribution

**Beautiful TUI**
- Real-time progress with spinners and progress bars
- Live view of running tests with JVM PIDs and elapsed time
- Compile failures and test failures shown inline
- Press 'q' to cancel gracefully

**Platform Support**
- JVM: Full granularity with suite/test level tracking
- JS/Native: BSP fallback for project-level execution

**Robustness**
- Configurable timeouts for JVM startup and suite execution
- Proper cleanup of forked JVMs on cancellation
- Thread dumps on timeout for debugging stuck tests

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>