@@ -7,6 +7,12 @@ import java.io.File
 import java.nio.file.Path
 
 object jvmRunCommand {
+
+  /** JVM options to suppress Scala 3 LazyVals sun.misc.Unsafe warnings */
+  val scala3CompatOptions: List[String] = List(
+    "--add-opens=java.base/sun.misc=ALL-UNNAMED"
+  )
+
   def apply(
       bloopProject: Config.Project,
       resolvedJvm: Lazy[ResolvedJvm],
@@ -31,6 +37,7 @@ object jvmRunCommand {
 
   def cmdArgs(jvmOptions: List[String], cp: List[Path], main: String, args: List[String]): List[String] =
     List[List[String]](
+      scala3CompatOptions,
       jvmOptions,
       List("-classpath", cp.mkString(File.pathSeparator), main),
       args
